# enterprise-kb-qa

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-siliconflow.txt
backend/app/: config.py  main.py  storage.py
backend/app/api/routes/: admin.py  auth.py  chat.py  documents.py  memories.py  meta.py  quick_phrases.py  sessions.py
backend/app/core/: security.py
backend/app/db/: models.py  session.py
backend/app/generation/: citation.py  llm_client.py  prompt.py
backend/app/ingestion/: chunker.py  converter.py  embedder.py  parser.py  pipeline.py
backend/app/memory/: __init__.py  condense.py  history.py  long_term.py
backend/app/retrieval/: filters.py  hybrid_search.py  reranker.py
backend/app/schemas/: admin.py  auth.py  chat.py  documents.py  memories.py  quick_phrases.py
backend/tests/: _check_cors.py  conftest.py  test_access_control.py  test_retry_logic.py  test_siliconflow_e2e.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  types.ts
frontend/src/api/: admin.ts  auth.ts  chat.ts  documents.ts  index.ts  memories.ts  meta.ts  quickPhrases.ts  sessions.ts
frontend/src/components/: ChatWindow.vue  CitationCard.vue  DocumentManager.vue  QuickPhrasesPanel.vue  SessionSidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  memories.ts  meta.ts  quickPhrases.ts  sessions.ts
frontend/src/views/: AdminView.vue  HomeView.vue  LoginView.vue  MemoriesView.vue
infra/: init.sql  migrate_v2_clearance.sql  migrate_v3_memory.sql  migrate_v4_user_memories.sql  migrate_v5_doc_status.sql  migrate_v6_quick_phrases.sql  migrate_v7_storage_key.sql
