[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-kb-qa-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # ── Web 框架 ────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",      # 文件上传

    # ── 数据库 ──────────────────────────────────────────────
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",              # async PostgreSQL 驱动
    "pgvector>=0.3.2",              # SQLAlchemy pgvector 类型支持

    # ── Pydantic ────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── 鉴权 ────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",

    # ── 文档解析 ─────────────────────────────────────────────
    "pypdf>=4.2.0",                 # PDF 文本层提取
    "pymupdf>=1.24.0",             # PDF → 图像渲染（扫描件 OCR 依赖，fitz 接口）
    "python-docx>=1.1.0",          # Word 文档解析
    "pytesseract>=0.3.10",          # OCR 本地回退（依赖系统 tesseract-ocr）
    "Pillow>=10.3.0",               # 图像处理（OCR 前处理）
    "google-cloud-vision>=3.7.0",   # Google Cloud Vision API OCR（扫描件加速）
    "markdown-it-py>=3.0.0",        # Markdown 解析

    # ── 嵌入与重排（进程内加载，单 worker） ──────────────────
    # FlagEmbedding 提供 bge-m3 完整接口：稠密向量 + 稀疏向量
    "FlagEmbedding>=1.2.9",
    "torch>=2.3.0",

    # ── LLM 客户端 ───────────────────────────────────────────
    "openai>=1.30.0",                    # 保留（DeepSeek condense fallback）
    "anthropic>=0.26.0",                 # Claude 主力 LLM
    "httpx>=0.27.0",

    # ── 可观测 ──────────────────────────────────────────────
    "langfuse>=2.36.0",

    # ── 工具 ────────────────────────────────────────────────
    "structlog>=24.2.0",
    "tenacity>=8.3.0",              # 重试装饰器
]

[project.optional-dependencies]
eval = [
    # 离线评估脚本依赖，不需要打入主镜像
    "ragas>=0.1.14",
    "datasets>=2.20.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                # TestClient async 支持
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "FlagEmbedding.*",
    "pytesseract.*",
    "langfuse.*",
    "ragas.*",
    "datasets.*",
    "pgvector.*",
    "fitz.*",           # PyMuPDF：PDF 页面渲染
    "docx.*",           # python-docx：无官方 stubs
    "google.cloud.*",   # google-cloud-vision：无完整 stubs
    "markdown_it.*", # markdown-it-py：部分版本无完整 stubs
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
